working on flex issue on mobile

--- a/css/style1.css
+++ b/css/style1.css
@@ -29,8 +29,7 @@ html,body {
     padding: 8px 15px 8px 15px;
     letter-spacing: 2px;
     color: #fff;
-    text-shadow: 0 0 0 rgba(168,3,3,1);
-    /*transition: all 0.5s; */   
+    text-shadow: 0 0 0 rgba(168,3,3,1); 
 }
 
 .tele-number:hover {
@@ -457,10 +456,10 @@ html,body {
   /*padding: .5vw;*/
   font-size: 0;
   display: -ms-flexbox;
-  /*-ms-flex-wrap: wrap;*/
+  -ms-flex-wrap: wrap;
   -ms-flex-direction: column;
-  /*-webkit-flex-flow: row wrap; 
-  flex-flow: row wrap; */
+  -webkit-flex-flow: row wrap; 
+  flex-flow: row wrap; 
   display: -webkit-box;
   display: flex;
 }
@@ -708,12 +707,6 @@ html,body {
     }
 }
 
-/*@media screen and (max-width: 500px) {
-    .state {
-        height: 25%;
-    }
-}*/
-
 .cb-slideshow,
 .cb-slideshow:after { 
     position: fixed;
@@ -746,12 +739,6 @@ html,body {
     -ms-animation: imageAnimation 36s linear infinite 0s;
     animation: imageAnimation 36s linear infinite 0s; 
 }
-
-/*@media screen and (max-width: 500px) {
-    .cb-slideshow {
-        height: 25%;
-    }
-}*/
 
 .cb-slideshow li div { 
     z-index: 0;
